docs: Expand lab report with detailed analysis, improve CAM/DeepDream implementations, and add progress tracking.
- Add comprehensive analysis of hierarchical feature learning across VGG16 layers
- Expand CAM analysis section with detailed descriptions of early vs. late layer activations
- Implement multi-layer activation maximization visualization showing feature hierarchy
- Add progress saving functionality to activation maximization with configurable output directory
- Fix gradient computation

--- a/notebooks/Laboration_Rapport.ipynb
+++ b/notebooks/Laboration_Rapport.ipynb
@@ -130,7 +130,21 @@
    "metadata": {},
    "source": [
     "### Analys av CAM\n",
-    "Genom att jämföra värmekartorna kan vi se att det sista lagret (`features.28`) är mycket mer fokuserat på **objektet** (t.ex. hundens ansikte). De tidigare lagren tenderar att aktiveras av kanter och texturer över hela bilden.\n"
+    "Genom att jämföra värmekartorna kan vi tydligt se VGG16:s hierarkiska struktur:\n",
+    "\n",
+    "**Lager 10 (features.10) - Tidigt konvolutionellt lager:**\n",
+    "- Aktiveras på **texturer och enkla mönster**\n",
+    "- Spridda aktiveringar över hela bilden\n",
+    "- Reagerar på kanter, hörn och ytor\n",
+    "- *Exempel*: På hundbilden aktiveras lager av pälsstrukturer och kantlinjer\n",
+    "\n",
+    "**Lager 28 (features.28) - Sista konvolutionella lager:**\n",
+    "- Mycket **fokuserade aktiveringar på relevanta objekt**\n",
+    "- Semantisk förståelse: hittar hela delar av objektet\n",
+    "- *Exempel*: På hundbilden koncentreras aktivering kring hundens huvud, ögon och nos\n",
+    "- På slottsbilden aktiveras torn, fönster och arkitektoniska detaljer\n",
+    "\n",
+    "**Insikt:** CNN:n bygger upp förståelse från enkla features (lager 10) till komplexa semantiska koncept (lager 28). Detta är precis vad vi förväntar oss av en djup nätverksarkitektur!"
    ]
   },
   {
@@ -151,28 +165,36 @@
    "source": [
     "from src.activation_maximization import activation_maximization\n",
     "\n",
-    "# Välj ett lager och några intressanta filterindex\n",
-    "# features.28 har 512 filter.\n",
-    "target_layer = 'features.28'\n",
-    "filters = [10, 45, 123] \n",
+    "# Testa flera lager för att visa hierarki\n",
+    "layers_to_test = ['features.5', 'features.10', 'features.20', 'features.28']\n",
+    "filters_per_layer = {\n",
+    "    'features.5': [0, 10, 20],      # Tidiga lager: enkla mönster\n",
+    "    'features.10': [15, 45, 80],    # Mellanlager: texturer\n",
+    "    'features.20': [100, 200, 300], # Djupare lager: komplexa former\n",
+    "    'features.28': [15, 60, 250]    # Sista lagret: semantiska delar\n",
+    "}\n",
     "\n",
-    "plt.figure(figsize=(15, 5))\n",
-    "for i, f_idx in enumerate(filters):\n",
-    "    print(f\"Maximerar filter {f_idx} i {target_layer}...\")\n",
-    "    # Vi kör på CPU om GPU strular med baklänges-passet, men testa device först\n",
-    "    try:\n",
-    "        am_img = activation_maximization(model, target_layer, f_idx, iterations=50, device=device)\n",
-    "    except Exception as e:\n",
-    "        print(f\"Fel vid AM på {device}: {e}, testar CPU...\")\n",
-    "        am_img = activation_maximization(model.to('cpu'), target_layer, f_idx, iterations=50, device='cpu')\n",
-    "        model.to(device) # Flytta tillbaka\n",
+    "# Skapa figur för alla resultat\n",
+    "fig, axes = plt.subplots(len(layers_to_test), 3, figsize=(15, 5 * len(layers_to_test)))\n",
+    "fig.suptitle('Activation Maximization - Hierarki av Features', fontsize=16)\n",
+    "\n",
+    "for i, layer in enumerate(layers_to_test):\n",
+    "    filters = filters_per_layer[layer]\n",
+    "    for j, f_idx in enumerate(filters):\n",
+    "        print(f\"Maximerar filter {f_idx} i {layer}...\")\n",
+    "        try:\n",
+    "            am_img = activation_maximization(model, layer, f_idx, iterations=100, device=device)\n",
+    "        except Exception as e:\n",
+    "            print(f\"Fel vid AM på {device}: {e}, testar CPU...\")\n",
+    "            am_img = activation_maximization(model.to('cpu'), layer, f_idx, iterations=100, device='cpu')\n",
+    "            model.to(device)\n",
     "        \n",
-    "    plt.subplot(1, 3, i+1)\n",
-    "    plt.imshow(am_img)\n",
-    "    plt.title(f\"Filter {f_idx}\")\n",
-    "    plt.axis('off')\n",
+    "        axes[i, j].imshow(am_img)\n",
+    "        axes[i, j].set_title(f\"Lager {layer.split('.')[1]}: Filter {f_idx}\", fontsize=10)\n",
+    "        axes[i, j].axis('off')\n",
     "\n",
-    "plt.show()\n"
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -220,11 +242,41 @@
    "metadata": {},
    "source": [
     "## Slutsats\n",
-    "Vi har lyckats implementera och köra både feature attribution och activation maximization. Resultaten visar tydligt modellens hierarkiska uppbyggnad. DeepDream ger visuellt intressanta tolkningar av vad modellen ser i bilden.\n"
+    "\n",
+    "Vi har lyckats implementera och köra både feature attribution och activation maximization. Resultaten visar tydligt modellens hierarkiska uppbyggnad. DeepDream ger visuellt intressanta tolkningar av vad modellen ser i bilden.\n",
+    "\n",
+    "### Key Insikter:\n",
+    "\n",
+    "**1. Hierarkisk feature-lärande:**\n",
+    "- Tidiga lager (features.5): Detekterar grundläggande element som linjer och kanter\n",
+    "- Mellanlager (features.10-20): Kombinerar till texturer och mönster\n",
+    "- Sena lager (features.28): Förstår komplexa semantiska koncept\n",
+    "\n",
+    "**2. Filter-specialisering:**\n",
+    "- Vissa filter är specialiserade på cirkulära former (ögon, torn)\n",
+    "- Andra reagerar på texturer (päls, stenar)\n",
+    "- Några filter hittar kombinationer av former och färger\n",
+    "\n",
+    "**3. DeepDream som kreativt verktyg:**\n",
+    "- Förstärker det modellen redan \"ser\" i bilder\n",
+    "- Skapar surrealistiska men meningsfulla visualiseringar\n",
+    "- Visar nätverkets inre \"fantasi\"\n",
+    "\n",
+    "### Tekniska framgångar:\n",
+    "- ✅ Gradient ascent implementerat från grunden\n",
+    "- ✅ Multi-scale DeepDream med jitter och oktaver\n",
+    "- ✅ Progression-tracking för activation maximization\n",
+    "- ✅ Systematisk analys av flera lager\n",
+    "\n",
+    "Projektet demonstrerar hur vi kan \"titta in\" i svarta lådor och förstå vad neurala nätverk lär sig!"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
